--- a/template/pom.xml
+++ b/template/pom.xml
@@ -109,7 +109,7 @@
             <version>5.3.6</version>
         </dependency>
 
-        <!-- log4j -->
+        <!-- log4j2 -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
